Fixed the responsive issue , was showing overflow for just use the max-w in child class

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: 'Outfit', sans-serif;
+  overflow-x: hidden!important;
 }
 /* index.css or global.css */
 .section-divider {
